# rl-gazebo

./: .gitignore  README.md
rl/: README.md
rl/launch/: gazebo_logger.launch  gazebo_n_logger.launch  gazebo_ugvn_logger.launch  rviz_tags.launch  spawn_2ugv.launch  spawn_robots.launch
rl/launch/archive/: hast.launch  spawn_ugv1.launch  spawn_ugvn.launch
rl_gazebo/: CMakeLists.txt  package.xml
rl_gazebo_msgs/: CMakeLists.txt  package.xml
rl_gazebo_plugins/: CMakeLists.txt  package.xml  readme.md
rl_gazebo_plugins/include/hector_quadrotor_gazebo_plugins/: gazebo_ros_baro.h
rl_gazebo_plugins/include/vicon_plugins/: ardrone_ros_baro.h  ardrone_simple_controller.h  gazebo_ros_kobuki_vicon.h  gazebo_vicon_diff_drive.h  hast_vicon_diff_drive.h
rl_gazebo_plugins/src/: ardrone_imu_plugin.cpp  ardrone_ros_baro.cpp  ardrone_simple_controller.cpp  ardrone_state_controller.cpp  gazebo_ros_baro.cpp  gazebo_ros_kobuki_vicon.cpp  gazebo_ros_kobuki_vicon_loads.cpp  gazebo_ros_kobuki_vicon_updates.cpp
rl_gazebo_plugins/urdf/: ardrone_plugins.urdf.xacro  ardrone_sensors.urdf.xacro  ardrone_simple_controller.urdf.xacro
rl_gazebo_robots/: CMakeLists.txt  package.xml
rl_gazebo_robots/UGV_n/config/: ugv4_pgr_params.yaml
rl_gazebo_robots/UGV_n/launch/: spawn_ugv.launch  ugvn_description.launch
rl_gazebo_robots/UGV_n/meshes/: hast_kobuki.dae  hast_kobuki_frame.blend  hast_kobuki_frame.stl
rl_gazebo_robots/UGV_n/urdf/: hast_ugvn_kobuki.urdf.xacro  hast_ugvn_kobuki_gazebo.urdf.xacro  hast_ugvn_kobuki_stereo.urdf.xacro  hast_ugvn_pgrstereo.urdf.xacro
rl_gazebo_robots/common/: vicon_ICs_20180430_001.txt
rl_gazebo_robots/common/dae/: creo_block.dae  yin_block.dae
rl_gazebo_robots/common/launch/: block_20180619_021.launch  dae_block.launch
rl_gazebo_robots/worlds/: empty.world  perspective.world
rl_kobuki/: CMakeLists.txt  package.xml
rl_kobuki/launch/: empty_world.launch  hast_n.launch  rviz.launch  spawn_1ugv.launch
rl_kobuki/launch/archive/: hast_1.launch  spawn_phase1.launch
rl_msg_to_tf/: CMakeLists.txt  package.xml
rl_msg_to_tf/src/: rl_msg_to_tf.cpp
robot_descriptions/: CMakeLists.txt  package.xml  readme.md
robot_descriptions/UGV_n/config/: ugv1_pgr_params.yaml
robot_descriptions/UGV_n/launch/: spawn_ugv.launch  ugvn_description.launch
robot_descriptions/UGV_n/meshes/: hast_kobuki.blend  hast_kobuki_frame.dae  hast_kobuki_frame_blackish.dae  hast_kobuki_frame_grey.dae  tortoisebot.stl
robot_descriptions/UGV_n/rviz/: ugvn.rviz
robot_descriptions/UGV_n/urdf/: hast_ugvn_kobuki.urdf.xacro  hast_ugvn_kobuki_stereo.urdf.xacro
robot_descriptions/common/blend/: creo_block.blend
robot_descriptions/common/dae/: dae_block.dae  yin_block_bottom.dae
robot_descriptions/common/launch/: block_20180430_001.launch  block_20190207_001.launch  spawn_block.launch  spawn_dae.launch  spawn_dae_block.launch
robot_descriptions/common/stl/: creo_block.stl
robot_descriptions/common/urdf/: creo_block.urdf.xacro  dae_block.urdf.xacro
robot_descriptions/scripts/: init_kobuki_urdf.sh
robot_descriptions/worlds/: ardrone_testworld.world  block.world  hast_kobuki_gasstation.world
